--- a/Assignments/Assignment2_hq443/Assignment2.ipynb
+++ b/Assignments/Assignment2_hq443/Assignment2.ipynb
@@ -90,7 +90,8 @@
     "        for i in range(Tinput.shape[0]):\n",
     "            sx = np.sign(Tinput[i])*max((np.absolute(Tinput[i]) - lbda*eta),0)\n",
     "            beta[i][0] = sx \n",
-    "        ISTA_loss[m] = -np.sum((np.dot(X,beta)-t)**2)/X.shape[0] + lbda * np.sum(beta) + 5.85\n",
+    "        # ISTA_loss[m] = -np.sum((np.dot(X,beta)-t)**2)/X.shape[0] + lbda * np.sum(beta) + 5.85\n",
+    "        ISTA_loss[m] = np.sum(np.square(np.dot(X, beta) - t)) + lbda * np.sum(np.abs(beta))\n",
     "    \n",
     "    \n",
     "    return beta, ISTA_loss\n",
